--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
       <div class="container">
-        <a class="navbar-brand"  href="Index.html"><img src="img/mylogo.png" alt="" width="50" /> </a></a>
+        <a class="navbar-brand"  href="#Jumbotron"><img src="img/mylogo.png" alt="" width="50" /> </a></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -83,9 +83,9 @@
               <div class="card border-0">
                 <div class="slider">
                   <div class="slides">
-                    <img src="img/desa wisata 1.jpg" style="padding: 1rem;"alt="Gambar 1" class="card-img-top">
-                    <img src="img/desa wisata 2.jpg" style="padding: 1rem;"alt="Gambar 2" class="card-img-top">
-                    <img src="img/desa wisata 3.jpg" style="padding: 1rem;"alt="Gambar 3" class="card-img-top">
+                    <img src="img/desa wisata 1.jpg" style="padding: 3rem;"alt="Gambar 1" class="card-img-top">
+                    <img src="img/desa wisata 2.jpg" style="padding: 3rem;"alt="Gambar 2" class="card-img-top">
+                    <img src="img/desa wisata 3.jpg" style="padding: 3rem;"alt="Gambar 3" class="card-img-top">
                   </div>
                   <div class="card-body">
                     <a class="nav-link" href="https://agunkunid.github.io/desawisata.github.io./" target="_blank">
